Fix image paths and update Vercel config - Updated chat and rent app images to correct filenames - Fixed spell-checker warnings by renaming files - Updated vercel.json to use modern buildCommand instead of legacy builds config

--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,7 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "build/web/**",
-      "use": "@vercel/static"
-    }
-  ],
+  "buildCommand": "flutter build web",
+  "outputDirectory": "build/web",
   "routes": [
     {
       "src": "/assets/(.*)",
@@ -23,6 +19,5 @@
       "src": "/(.*)",
       "dest": "/build/web/$1"
     }
-  ],
-  "outputDirectory": "build/web"
+  ]
 }
