--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,11 @@
 {
   "version": 2,
-  "buildCommand": "flutter build web",
-  "outputDirectory": "build/web",
+  "builds": [
+    {
+      "src": "build/web/**",
+      "use": "@vercel/static"
+    }
+  ],
   "routes": [
     {
       "src": "/assets/(.*)",
@@ -19,5 +23,6 @@
       "src": "/(.*)",
       "dest": "/build/web/$1"
     }
-  ]
+  ],
+  "outputDirectory": "build/web"
 }
